# ItemStorageDesktop

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  github.rs  main.rs  scanner.rs  sync.rs
src-tauri/src/modes/: admin.rs  user.rs
